# quiz-question-generator

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: main.yml
app/: __init__.py  api.py  config.py  llm.py  logs.py  main.py  quiz_generator.py  schemas.py  ui.py
tests/: test_api.py  test_llm.py  test_quiz_generator.py  test_schemas.py
